# claude-memory

./: .gitignore  README.md  pyproject.toml
docs/: auto-sync.md  chunking-improvements.md  multi-machine.md
skill/: SKILL.md
src/claude_memory/: __init__.py  chunker.py  cli.py  config.py  parser.py  store.py  summarizer.py  text_index.py
tests/: conftest.py  test_chunker.py  test_cli.py  test_parser.py  test_store.py  test_text_index.py
tests/fixtures/: file-history-only.jsonl  long-conversation.jsonl  multi-exchange.jsonl  short-conversation.jsonl  with-rich-tool-calls.jsonl  with-tool-calls.jsonl
